--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -13,27 +13,27 @@
             <div class="modal-body">
                 <form action="/profileEdit/<%= user._id %>" method="post">
 					<div class="mb-3">
-						<label for="username" class="form-label">Username</label>
+						<label for="username" class="form-label text-black">Username</label>
 						<input type="text" class="form-control" id="username" name="username" value="<%= user.username %>">
 					</div>
 					<div class="mb-3">
-						<label for="email" class="form-label">Email</label>
+						<label for="email" class="form-label text-black">Email</label>
 						<input type="email" class="form-control" id="email" name="email" value="<%= user.email %>">
 					</div>
 					<div class="mb-3">
-						<label for="phonenumber" class="form-label">Phone Number</label>
+						<label for="phonenumber" class="form-label text-black">Phone Number</label>
 						<input type="tel" class="form-control" id="phonenumber" name="phonenumber" value="<%= user.phonenumber %>">
 					</div>
 					<div class="mb-3">
-						<label for="address" class="form-label">Address</label>
+						<label for="address" class="form-label text-black">Address</label>
 						<textarea class="form-control" id="address" name="address"><%= user.address %></textarea>
 					</div>
 					<div class="mb-3">
-						<label for="dob" class="form-label">Date of Birth</label>
+						<label for="dob" class="form-label text-black">Date of Birth</label>
 						<input type="date" class="form-control" id="dob" name="dob" value="<%= user && user.dob ? user.dob.toISOString().split('T')[0] : '' %>">
 					</div>
 					<div class="mb-3">
-						<label class="form-label">Gender</label>
+						<label class="form-label text-black">Gender</label>
 						<select class="form-select" id="gender" name="gender">
 							<option value="">Select</option>
 							<option value="Male" <%= user.gender === "Male" ? "selected" : "" %>>Male</option>
@@ -41,24 +41,35 @@
 							<option value="Other" <%= user.gender === "Other" ? "selected" : "" %>>Other</option>
 						</select>
 					</div>
+					<div class="mb-3 d-flex align-items-center justify-content-start gap-3">
+                        <label class="form-label m-0 p-0 text-black">Status :-</label>
+                        <div class="d-flex align-items-center">
+                            <input type="radio" id="active" name="status" value="Active" <%= user.status === "Active" ? "checked" : "" %>>
+                            <label for="active" class="m-0 ps-1">Active</label>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <input type="radio" id="inactive" name="status" value="Inactive" <%= user.status === "Inactive" ? "checked" : "" %>>
+                            <label for="inactive" class="m-0 ps-1">Inactive</label>
+                        </div>
+                    </div>
 					<div class="mb-3">
-						<label for="language" class="form-label">Language</label>
+						<label for="language" class="form-label text-black">Language</label>
 						<input type="text" class="form-control" id="language" name="language" value="<%= user.language %>">
 					</div>
 					<div class="mb-3">
-						<label for="postalcode" class="form-label">Postal Code</label>
+						<label for="postalcode" class="form-label text-black">Postal Code</label>
 						<input type="text" class="form-control" id="postalcode" name="postalcode" value="<%= user.postalcode %>">
 					</div>
 					<div class="mb-3">
-						<label for="city" class="form-label">City</label>
+						<label for="city" class="form-label text-black">City</label>
 						<input type="text" class="form-control" id="city" name="city" value="<%= user.city %>">
 					</div>
 					<div class="mb-3">
-						<label for="state" class="form-label">State</label>
+						<label for="state" class="form-label text-black">State</label>
 						<input type="text" class="form-control" id="state" name="state" value="<%= user.state %>">
 					</div>
 					<div class="mb-3">
-						<label for="country" class="form-label">Country</label>
+						<label for="country" class="form-label text-black">Country</label>
 						<input type="text" class="form-control" id="country" name="country" value="<%= user.country %>">
 					</div>
 					<div class="modal-footer">
@@ -114,9 +125,9 @@
 													<input type="file" id="imageUpload" name="profileImg" style="display: none;">
 												</div>
 												<div class="dis ps-5">
-													<h4 class="mt-3"><%= user && user.username ? user.username : "Nilesh" %></h4>
-													<p class="text-muted"><%= user && user.email ? user.email : "johndoe@example.com" %></p>
-													<!-- <span><%= user && user.status ? user.status : "Active" %></span> -->
+													<h4 class="mt-3 mb-0"><%= user && user.username ? user.username : "Nilesh" %></h4>
+													<p class="text-muted m-0 fs-6"><%= user && user.email ? user.email : "johndoe@example.com" %></p>
+													<span class="<%= user.status == 'Active' ? 'text-success fw-bold' : 'text-danger fw-bold' %>"><%= user.status %></span>
 												</div>
 											</div>
 											<div class="upload-btn">
