--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,10 @@ body {
     outline: none;
 }
 
+a{
+    text-decoration: none !important;
+}
+
 a:hover {
     outline: none;
     text-decoration: none;
