--- a/views/compo/header.ejs
+++ b/views/compo/header.ejs
@@ -1,7 +1,7 @@
-<header class="navbar pcoded-header navbar-expand-lg navbar-light headerpos-fixed">
+<header class="navbar pcoded-header navbar-expand-lg navbar-light headerpos-fixed p-0">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="#!"><span></span></a>
-        <a href="index.html" class="b-brand">
+        <a href="/" class="b-brand">
             <img src="./images/logo.svg" alt="" class="logo images">
             <img src="./images/logo-icon.svg" alt="" class="logo-thumb images">
         </a>
@@ -16,7 +16,7 @@
                 <div class="main-search open">
                     <div class="input-group">
                         <input type="text" id="m-search" class="form-control" placeholder="Search . . .">
-                        <a href="#!" class="input-group-append search-close">
+                        <a href="#!" class="input-group-append search-close text-decoration-none">
                             <i class="feather icon-x input-group-text"></i>
                         </a>
                         <span class="input-group-append search-btn btn btn-primary">
@@ -29,7 +29,7 @@
         <ul class="navbar-nav ml-auto">
             <li>
                 <div class="dropdown">
-                    <a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
+                    <a class="dropdown-toggle text-decoration-none" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
                     <div class="dropdown-menu dropdown-menu-right notification">
                         <div class="noti-head">
                             <h6 class="d-inline-block m-b-0">Notifications</h6>
@@ -108,7 +108,7 @@
             </li>
             <li>
                 <div class="dropdown drp-user">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a href="#" class="dropdown-toggle text-decoration-none" data-toggle="dropdown">
                         <i class="icon feather icon-settings"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right profile-notification">
@@ -118,7 +118,7 @@
 								<span class="<%= user.status == 'Active' ? 'bg-success' : 'bg-danger' %> p-1  rounded-pill position-absolute z-5 border border-2" style="bottom: 0.5rem; right: 1.1rem;"></span>
                             </div>
                             <span><%= user && user.username ? user.username : "Nilesh" %></span>
-                            <a href="/SignOut" class="dud-logout" title="Logout">
+                            <a href="/SignOut" class="dud-logout text-decoration-none" title="Logout">
                                 <i class="feather icon-log-out"></i>
                             </a>
                         </div>
