--- a/views/pages/addBlog.ejs
+++ b/views/pages/addBlog.ejs
@@ -21,7 +21,7 @@
 								<div class="page-block">
 									<div class="row align-items-center justify-content-center">
 										<div class="col-md-8">
-                                            <form action="/addBlog" method="post">
+                                            <form action="/addBlog" method="post" enctype="multipart/form-data">
                                                 <div class="form-group mb-3">
                                                     <label for="title" class="text-black">Title :-</label>
                                                     <input type="text" class="form-control" id="title" name="title" placeholder="Title">
