--- a/views/compo/sidebar.ejs
+++ b/views/compo/sidebar.ejs
@@ -58,8 +58,8 @@
                         <li class=""><a href="/authsignin" class="" target="_blank">Sign in</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="/addBlog" class="nav-link"><span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Add Blog</span></a></li>
-                <li class="nav-item"><a href="/ViewBlog" class="nav-link"><span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">View Blog</span></a></li>
+                <li class="nav-item"><a href="/addBlog" class="nav-link"><span class="pcoded-micon"><i class="fa-solid fa-square-plus"></i></span><span class="pcoded-mtext">Add Blog</span></a></li>
+                <li class="nav-item"><a href="/ViewBlog" class="nav-link"><span class="pcoded-micon"><i class="fa-solid fa-list"></i></span><span class="pcoded-mtext">View Blog</span></a></li>
                 <li class="nav-item"><a href="/samplepage" class="nav-link"><span class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Sample page</span></a></li>
                 <li class="nav-item disabled"><a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-power"></i></span><span class="pcoded-mtext">Disabled menu</span></a></li>
             </ul>
