--- a/views/index.ejs
+++ b/views/index.ejs
@@ -589,9 +589,10 @@
 											<p class="m-t-15">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 											<hr>
 											<div class="row justify-content-center user-social-link">
-												<div class="col-auto"><a href="#!"><i class="fab fa-facebook-f text-primary f-22"></i></a></div>
-												<div class="col-auto"><a href="#!"><i class="fab fa-twitter text-c-info f-22"></i></a></div>
-												<div class="col-auto"><a href="#!"><i class="fab fa-dribbble text-c-red f-22"></i></a></div>
+												<div class="col-auto"><a href="<%= user.facebook %>" target="_blank"><i class="fab fa-facebook-f text-primary f-22"></i></a></div>
+												<div class="col-auto"><a href="<%= user.linkedin %>" target="_blank"><i class="fa-brands fa-linkedin-in text-c-info f-22"></i></a></div>
+												<div class="col-auto"><a href="mailto:<%= user.email %>"><i class="fa-solid fa-envelope text-c-red f-22"></i></a></div>
+												<div class="col-auto"><a href="<%= user.instagram%>" target="_blank"><i class="fa-brands fa-instagram text-primary f-22"></i></a></div>
 											</div>
 										</div>
 									</div>
