--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -17,6 +17,10 @@
 						<input type="text" class="form-control" id="username" name="username" value="<%= user.username %>">
 					</div>
 					<div class="mb-3">
+						<label for="bio" class="form-label text-black">Bio</label>
+						<input type="text" class="form-control" id="bio" name="bio" value="<%= user.bio %>">
+					</div>
+					<div class="mb-3">
 						<label for="email" class="form-label text-black">Email</label>
 						<input type="email" class="form-control" id="email" name="email" value="<%= user.email %>">
 					</div>
@@ -71,6 +75,18 @@
 					<div class="mb-3">
 						<label for="country" class="form-label text-black">Country</label>
 						<input type="text" class="form-control" id="country" name="country" value="<%= user.country %>">
+					</div>
+					<div class="mb-3">
+						<label for="linkedin" class="form-label text-black">Linkedin</label>
+						<input type="text" class="form-control" id="linkedin" name="linkedin" value="<%= user.linkedin %>">
+					</div>
+					<div class="mb-3">
+						<label for="facebook" class="form-label text-black">Facebook</label>
+						<input type="text" class="form-control" id="facebook" name="facebook" value="<%= user.facebook %>">
+					</div>
+					<div class="mb-3">
+						<label for="instagram" class="form-label text-black">Instagram</label>
+						<input type="text" class="form-control" id="instagram" name="instagram" value="<%= user.instagram %>">
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
