--- a/views/pages/authsignin.ejs
+++ b/views/pages/authsignin.ejs
@@ -17,7 +17,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text"><i class="feather icon-mail"></i></span>
 								</div>
-								<input type="email" name="email" class="form-control" placeholder="Email address">
+								<input type="email" name="username" class="form-control" placeholder="Email address">
 							</div>
 							<div class="input-group mb-3">
 								<div class="input-group-prepend">
